Updated all the html

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     />
     <link rel="stylesheet" href="/styles.css" />
   </head>
+
   <body>
     <div class="card text-bg-dark">
       <img src="media/italy-santa-rosa.jpeg" alt="romantic destination" />
@@ -157,7 +158,8 @@
               class="btn btn-outline-secondary"
               href="/about.html#contact"
               title="Explore"
-            >Access to our exclusive services
+            >
+              Access to our exclusive services
             </button>
           </div>
         </div>
@@ -166,62 +168,90 @@
     <br />
     <div class="album py-5 bg-light">
       <div class="container">
-          <div class="row">
-            <div class="col-md-4">
-              <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="media/st-regis-bahia-beach-resort.webp" alt="The St Regis Bahia Beach Resort">
-                <div class="card-body">
-                  <p class="card-text">The St.Regis Bahia Beach Resort in Puerto Rico is an eco-friendly property that has set the highest standard of luxury and refinement.</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <button 
-                      type="button" 
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card mb-4 box-shadow">
+              <img
+                class="card-img-top"
+                src="media/st-regis-bahia-beach-resort.webp"
+                alt="The St Regis Bahia Beach Resort"
+              />
+              <div class="card-body">
+                <p class="card-text">
+                  The St.Regis Bahia Beach Resort in Puerto Rico is an
+                  eco-friendly property that has set the highest standard of
+                  luxury and refinement.
+                </p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <button
+                      type="button"
                       class="btn btn-sm btn-outline-secondary"
                       href="/world.html"
-                      >Explore more
-                      </button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="media/Stay-at-Delaire-Graff-Estate-Luxury-Hotel.jpeg" alt="The Delaire Graff Lodges and Spa">
-                <div class="card-body">
-                  <p class="card-text">The Delaire Graff Lodges and Spa in South Africa must easily be one of the world's most exceptional art, design, spa, cuisine and wine experiences.</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <button 
-                      type="button" 
-                      class="btn btn-sm btn-outline-secondary"
-                      href="/world.html"
-                      >Explore more
-                      </button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="media/vieil-suite-hotel-Imperial-Vienna.webp" alt="the hotel Imperial in Vienna">
-                <div class="card-body">
-                  <p class="card-text">The sumptuous surroundings of the hotel Imperial in Vienna, Austria back to 1863. A historical landmark that also serves Viennese culinary classics.</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <button 
-                      type="button" 
-                      class="btn btn-sm btn-outline-secondary"
-                      href="/world.html"
-                      >Explore more
+                    >
+                      Explore more
                     </button>
-                    </div>
                   </div>
                 </div>
               </div>
             </div>
-      </div>    
-    </div>        
+          </div>
+          <div class="col-md-4">
+            <div class="card mb-4 box-shadow">
+              <img
+                class="card-img-top"
+                src="media/Stay-at-Delaire-Graff-Estate-Luxury-Hotel.jpeg"
+                alt="The Delaire Graff Lodges and Spa"
+              />
+              <div class="card-body">
+                <p class="card-text">
+                  The Delaire Graff Lodges and Spa in South Africa must easily
+                  be one of the world's most exceptional art, design, spa,
+                  cuisine and wine experiences.
+                </p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <button
+                      type="button"
+                      class="btn btn-sm btn-outline-secondary"
+                      href="/world.html"
+                    >
+                      Explore more
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card mb-4 box-shadow">
+              <img
+                class="card-img-top"
+                src="media/vieil-suite-hotel-Imperial-Vienna.webp"
+                alt="the hotel Imperial in Vienna"
+              />
+              <div class="card-body">
+                <p class="card-text">
+                  The sumptuous surroundings of the hotel Imperial in Vienna,
+                  Austria back to 1863. A historical landmark that also serves
+                  Viennese culinary classics.
+                </p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <button
+                      type="button"
+                      class="btn btn-sm btn-outline-secondary"
+                      href="/world.html"
+                    >
+                      Explore more
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
