--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <br />
         <br />
         <br />
-        <h2 class="text-center" style="color: #ffffff9e">
+        <h2 class="mt-5" class="text-center" style="color: #ffffff9e">
           AN EXCLUSIVE PASSPORT TO
         </h2>
         <h1 class="text-center" style="color: #fabff79e">
