--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
 
   <body>
     <div class="card text-bg-dark">
-      <img src="media/italy-santa-rosa.jpeg" alt="romantic destination" />
+      <img
+        class="img-responsive"
+        src="media/italy-santa-rosa.jpeg"
+        alt="romantic destination"
+      />
       <div class="card-img-overlay">
         <nav
           class="navbar navbar-expand-lg navbar-light fixed-top"
@@ -104,7 +108,7 @@
         <br />
         <br />
         <br />
-        <h2 class="mt-5" class="text-center" style="color: #ffffff9e">
+        <h2 class="text-center" class="mt-2" style="color: #ffffff9e">
           AN EXCLUSIVE PASSPORT TO
         </h2>
         <h1 class="text-center" style="color: #fabff79e">
