--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <body>
     <div class="card text-bg-dark">
       <img
-        class="img-responsive"
+        class="img-fluid"
         src="media/italy-santa-rosa.jpeg"
         alt="romantic destination"
       />
