Created about page and updated html

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <li class="nav-item">
                   <a
                     class="nav-link"
-                    href="/europe.html#contact"
+                    href="/about.html#contact"
                     title="Contact us"
                     >Travel with us</a
                   >
