Created contact page and updated html

--- a/index.html
+++ b/index.html
@@ -94,11 +94,13 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a
-                    class="nav-link"
-                    href="/about.html#contact"
-                    title="Contact us"
+                  <a class="nav-link" href="/about.html" title="Travel with us"
                     >Travel with us</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/contact.html" title="Contact us"
+                    >Contact us</a
                   >
                 </li>
               </ul>
@@ -129,7 +131,7 @@
           <button
             type="button"
             class="btn btn-outline-light"
-            href="/about.html#contact"
+            href="/contact.html"
             title="Explore"
           >
             EXPLORE MORE
@@ -160,7 +162,7 @@
             <button
               type="button"
               class="btn btn-outline-secondary"
-              href="/about.html#contact"
+              href="/about.html"
               title="Explore"
             >
               Access to our exclusive services
