--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/styles.css" />
+    <script
+      src="https://kit.fontawesome.com/ddc3ee268a.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
@@ -259,5 +263,27 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+        <div>
+          <h4>Travel Inquiry</h4>
+          <p class="text-muted">Get in touch</p>
+        </div>
+        <div>
+          <a href="" class="btn btn-branding mt-3"> Contact us </a>
+        </div>
+      </div>
+      <div class="d-flex justify-content-center mb-5">
+        <p>info@romantic-destinations.com</p>
+      </div>
+      <div class="social-links d-flex justify-content-center">
+        <a href="https://www.instragram.com/" target="_blank">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://www.twitter.com/" target="_blank">
+          <i class="fab fa-twitter"></i>
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
