Updated html and css

--- a/index.html
+++ b/index.html
@@ -114,10 +114,15 @@
         <br />
         <br />
         <br />
-        <h2 class="text-center" class="mt-2" style="color: #ffffff9e">
+        <h2
+          class="index"
+          class="text-center"
+          class="mt-2"
+          style="color: #ffffff9e"
+        >
           AN EXCLUSIVE PASSPORT TO
         </h2>
-        <h1 class="text-center" style="color: #fabff79e">
+        <h1 class="index" class="text-center" style="color: #fabff79e">
           <img
             src="media/rd-logo-1.png"
             width="40"
@@ -125,7 +130,7 @@
             alt="romantic destinations logo"
           /><span>ROMANTIC DESTINATIONS</span>
         </h1>
-        <h3 class="text-center" style="color: #ffffff9e">
+        <h3 class="index" class="text-center" style="color: #ffffff9e">
           A Travel Guide to Discover the most Romantic Destinations in Europe
           and around The World
         </h3>
