--- a/index.html
+++ b/index.html
@@ -114,15 +114,10 @@
         <br />
         <br />
         <br />
-        <h2
-          class="index"
-          class="text-center"
-          class="mt-2"
-          style="color: #ffffff9e"
-        >
+        <h2 class="text-center" class="mt-2" style="color: #ffffff9e">
           AN EXCLUSIVE PASSPORT TO
         </h2>
-        <h1 class="index" class="text-center" style="color: #fabff79e">
+        <h1 class="text-center" style="color: #fabff79e">
           <img
             src="media/rd-logo-1.png"
             width="40"
@@ -130,7 +125,7 @@
             alt="romantic destinations logo"
           /><span>ROMANTIC DESTINATIONS</span>
         </h1>
-        <h3 class="index" class="text-center" style="color: #ffffff9e">
+        <h3 class="text-center" style="color: #ffffff9e">
           A Travel Guide to Discover the most Romantic Destinations in Europe
           and around The World
         </h3>
@@ -271,11 +266,21 @@
     <footer>
       <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
         <div>
-          <h4>Travel Inquiry</h4>
-          <p class="text-muted">Get in touch</p>
+          <h4 class="text-center" class="mt-3">Travel Inquiry</h4>
         </div>
         <div>
-          <a href="" class="btn btn-branding mt-3"> Contact us </a>
+          <div class="d-flex justify-content-between align-items-center">
+            <div class="btn-group">
+              <button
+                type="button"
+                class="btn btn-outline-secondary mt-3"
+                href="/contact.html"
+                title="Contact us"
+              >
+                CONTACT US
+              </button>
+            </div>
+          </div>
         </div>
       </div>
       <div class="d-flex justify-content-center mb-5">
@@ -286,7 +291,7 @@
           <i class="fab fa-instagram"></i>
         </a>
         <a href="https://www.twitter.com/" target="_blank">
-          <i class="fab fa-twitter"></i>
+          <i class="fab fa-twitter" class="ml-3"></i>
         </a>
       </div>
     </footer>
