--- a/index.html
+++ b/index.html
@@ -264,16 +264,16 @@
       </div>
     </div>
     <footer>
-      <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+      <div class="contact-box justify-content-center mt-3 d-none d-md-flex">
         <div>
-          <h4 class="text-center" class="mt-3">Travel Inquiry</h4>
+          <h4 class="text-center" class="mt-3">TRAVEL ENQUIRY</h4>
         </div>
         <div>
-          <div class="d-flex justify-content-between align-items-center">
+          <div class="d-flex justify-content-center">
             <div class="btn-group">
               <button
                 type="button"
-                class="btn btn-outline-secondary mt-3"
+                class="btn btn-outline-secondary mt-6"
                 href="/contact.html"
                 title="Contact us"
               >
@@ -283,7 +283,7 @@
           </div>
         </div>
       </div>
-      <div class="d-flex justify-content-center mb-5">
+      <div class="d-flex justify-content-center mb-4">
         <p>info@romantic-destinations.com</p>
       </div>
       <div class="social-links d-flex justify-content-center">
