--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,70 @@
     ></script>
   </head>
   <body>
+    <nav
+      class="navbar navbar-expand-lg navbar-light fixed-top"
+      style="background-color: #fabff7bc"
+    >
+      <div class="container">
+        <a class="navbar-brand" href="/">
+          <img
+            src="media/rd-logo-1.png"
+            width="40"
+            height="40"
+            alt="romantic destinations logo"
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/"
+                tilte="Homepage"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="/europe.html"
+                title="Europe Destinations"
+                >Europe</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/world.html" title="World Destinations"
+                >Around the World</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/about.html" title="Travel with us"
+                >Travel with us</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/contact.html" title="Contact us"
+                >Contact us</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <br />
+    <br />
+    <br />
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5">We want to hear more about your dream destination</h1>
