--- a/europe.html
+++ b/europe.html
@@ -111,8 +111,8 @@
             <h2 class="mb-4">Europe Destinations</h2>
             <p class="mb-5">
               We are a travel specialist that will tailor-made your romantic
-              getaway; treating you t competitive prices, exclusive offers & VIP
-              benefits at the finest hotels across the globe. Contact us for
+              getaway; treating you with competitive prices, exclusive offers &
+              VIP benefits at the finest hotels across the globe. Contact us for
               details of our special Membership.
             </p>
             <button
